mail notification: ensure google notification setting is correct

Google XMPP server has an (extension) setting that can be used to
enable mail notifications, see
https://code.google.com/apis/talk/jep_extensions/usersettings.html

https://bugs.freedesktop.org/show_bug.cgi?id=40565